--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -19,6 +19,8 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+        <!-- user profile sidebar -->
+          
       
         <div class="collapse navbar-collapse ml-5 " id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
@@ -28,12 +30,16 @@
                 </svg></a>
             </li>
             <li class="nav-item active ">
-                <a class="nav-link" href="/products">Products  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                <a class="nav-link" href="/products">Products <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
                   <path d="M4.70435 6.75L9.20435 11.25L13.7043 6.75" stroke="#121212" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   </svg></a>
               </li>
-              
           </ul>
+          <a href="/login" class="nav-link text-dark">
+            <div class="text-secondary">
+             Sign In
+            </div>
+          </a>
           <form class="form-inline my-2 my-lg-0">
            <a href="/profile">
             <div>
