--- a/views/style/style.css
+++ b/views/style/style.css
@@ -331,10 +331,13 @@ header {
   background: #0B87A6;
 }
 
+#hamburger{
+  display: none;
+}
+
 .sidebar {
   z-index: 1;
   top: 0;
-  /* background: #2f323a; */
   margin-top: 50px;
   padding-top: 30px;
   position: fixed;
@@ -418,7 +421,7 @@ label #sidebar_btn:hover {
 }
 
 .contents {
-  width: (100% - 250px);
+  /* width: (100% - 250px); */
   margin-top: 100px;
   padding: 20px;
   margin-left: 250px;
@@ -453,11 +456,168 @@ label #sidebar_btn:hover {
   opacity: 0.8;
 }
 
+/* user profile sidebar  */
+#menuToggle
+{
+  display: block;
+  position: relative;
+  top: 50px;
+  left: 50px;
+  
+  z-index: 1;
+  
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle a
+{
+  text-decoration: none;
+  color: #232323;
+  
+  transition: color 0.3s ease;
+}
+
+#menuToggle a:hover
+{
+  color: tomato;
+}
+
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  
+  cursor: pointer;
+  
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+  
+  -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  
+  background: #cdcdcd;
+  border-radius: 3px;
+  
+  z-index: 1;
+  
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  width: 100%;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+  
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
+
+/* home menu hamburger  */
+
 /* Responsive CSS */
+@media screen and (max-width: 780px) {
+  #homepageHamburger {
+    display: block !important;
+  }
+}
 
 @media screen and (max-width: 780px) {
   .sidebar {
       display: none;
+  }
+  #hamburger{
+    display: block;
+  }
+
+  .contents{
+    margin-left:0;
+    width: 100%;
   }
 
   #sidebar_btn {
@@ -853,4 +1013,3 @@ body{
   to{box-shadow: inset -3px 0px 0px transparent;}
 }
 
-/* side navbar */
