Fixed Order id error

--- a/views/partials/adminOrders.ejs
+++ b/views/partials/adminOrders.ejs
@@ -27,8 +27,8 @@
             <tr>
               <!-- Display Order ID -->
               <td><%= order._id.toString().substr(15) %></td>
-              <td><%= order.user._id.toString().substr(15) %></td>
-
+              <td><%= order.user.toString().substr(15) %></td>
+              
               <!-- Display Product Names -->
               <td>
                 <ul class="list-unstyled">
