--- a/views/partials/adminOrders.ejs
+++ b/views/partials/adminOrders.ejs
@@ -63,10 +63,11 @@
                 </div>
               </td>
               <td><span>&#8377</span> <%= order.totalAmount %></td>
-              <td><button class="btn btn-sm btn-outline-danger" onclick="openModal('<%= order._id %>')">View Order</button></td>
+              <td><button class="btn btn-sm btn-outline-secondary" onclick="openModal('<%= order._id %>', 'admin')">View Order</button></td>
+
             </tr>
 
-            <div class="modal fade" id="viewOrderModal<%= order._id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal fade" id="adminViewOrderModal<%= order._id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
