--- a/views/partials/userOrders.ejs
+++ b/views/partials/userOrders.ejs
@@ -12,13 +12,14 @@
               <th>Status</th>
               <th>Amount</th>
               <th></th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
             <% orders.forEach(order => { %>
               <tr <% if (order.status === 'Canceled') { %>class="table-secondary"<% } %> >
                 <!-- Display Order ID -->
-                <td>ID : <%= order._id %></td>
+                <td><%= order._id.toString().substr(15) %></td>
                 
                 <!-- Display Product Names -->
                 <td>
@@ -130,7 +131,26 @@
 
                   </div>
                 </td>
-                
+                <td><button class="btn btn-sm btn-outline-secondary" onclick="openModal('<%= order._id %>', 'user')">View Order</button></td>
+
+                <div class="modal fade" id="userViewOrderModal<%= order._id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                  <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle">Order Details</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
               </tr>
             <% }); %>
            
@@ -200,6 +220,7 @@
 
 </script>
     <script src="../js/cancelOrder.js"></script>
+    <script src="../js/adminOrder.js"></script>
     
    
 
