--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -48,12 +48,15 @@
                     </button>
                   </div>
                   
-              
+              </div>
                </td>
-                <td class="pt-4 productPrice" data-price="<%= cartItem.product.productPrice %>"><span>&#8377</span><%= cartItem.product.productPrice %></td>
-                <!-- <td class="pt-4 subTotal" data-subtotal="<%= cartItem.product.productPrice * cartItem.quantity %>" data-subtotal-cell="true">$<%= cartItem.product.productPrice * cartItem.quantity %></td> -->
-                <td class="pt-4 subTotal" data-subtotal="<%= cartItem.product.productPrice * cartItem.quantity %>" data-subtotal-cell="true" data-product-id="<%= cartItem.product._id %>"><span>&#8377</span><%= cartItem.product.productPrice * cartItem.quantity %></td>
-
+               <td class="pt-4 productPrice" data-price="<%= cartItem.product.productPrice %>" data-product-id="<%= cartItem.product._id %>">
+                ₹<%= cartItem.product.productPrice %>
+              </td>
+              <td class="pt-4 subTotal" data-subtotal="<%= cartItem.product.productPrice * cartItem.quantity %>" data-subtotal-cell="true" data-product-id="<%= cartItem.product._id %>">
+                ₹<%= cartItem.product.productPrice * cartItem.quantity %>
+              </td>
+              
                 <td>
                   <button class="deleteCartItem btn btn-danger mt-3" data-delete="<%= cartItem._id %>" cart-id="<%= populatedCart._id %>">Remove</button>
                 </td>
@@ -66,7 +69,7 @@
       </div>
 
       <div class="d-flex justify-content-center mt-1">
-        <p>Pay <strong><span>&#8377</span>15</strong> more to EXPRESS Shipping</p>
+        <p>Pay <strong>₹15</strong> more to EXPRESS Shipping</p>
       </div>
 
       <div class="d-flex justify-content-center mt-5">
