Fix : Removed js alerts

--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -101,7 +101,16 @@
 
 
   
-
+<div class="modal fade" id="removeCartIteSuccess" tabindex="-1" aria-labelledby="removeCartIteSuccess" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Cart Item Removed</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
  
