--- a/views/pages/checkout.ejs
+++ b/views/pages/checkout.ejs
@@ -334,6 +334,16 @@
     </div>
   </section>
 
+  <div class="modal fade" id="selectAddress" tabindex="-1" aria-labelledby="selectAddress" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Please Select Address</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="../js/coupon.js"></script>
   <script src="../js/orders.js"></script>
