--- a/views/partials/footerSection.ejs
+++ b/views/partials/footerSection.ejs
@@ -46,8 +46,8 @@
       </div>
       <div class="row text-center">
           <div class="col-md-12">
-              <span class="copyright quick-links ">Copyright &copy; planet
-                  <script>document.write(new Date().getFullYear())</script>
+              <span class="copyright quick-links ">Copyright &copy; George Jose
+                 2023
               </span>
           </div>
       </div>
